# libNoveil

./: CMakeLists.txt  Class diagrams.pu  README.md
LibNoveilTest/: LibNoveilTest.vcxproj  pch.h  test.cpp
LibNoveilTest/x64/Debug/: LibNoveilTest.exe.recipe  LibNoveilTest.vcxproj.FileListAbsolute.txt
LibNoveilTest/x64/Debug/LibNoveilTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  LibNoveilTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LibNoveilTest/x64/Release/LibNoveilTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  LibNoveilTest.lastbuildstate
Sample-Test1/: Sample-Test1.vcxproj  pch.h  test.cpp
Sample-Test1/x64/Debug/: Sample-Test1.exe.recipe  Sample-Test1.vcxproj.FileListAbsolute.txt
Sample-Test1/x64/Debug/Sample-Test1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Sample-Test1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/: Coding style.md
doxygen/html/: _a_character_8h_source.html  _anim_unit_8h_source.html  _n_agent_8h_source.html  _n_anim_curve_8h_source.html  _n_animation_8h_source.html  _n_asset_8h_source.html  _n_asset_manager_8h_source.html  _n_engine_8h_source.html  _n_graph_8h.html  _n_graph_8h__incl.map  _n_graph_8h_source.html  _n_memory_8h_source.html  _n_renderer_8h_source.html  _n_sequencer_8h_source.html  _n_texture_8h_source.html  _n_utils_8h_source.html  _n_variant_8h_source.html  annotated.html  classes.html  classnoveil_1_1_i_n_info-members.html  classnoveil_1_1_i_n_info.html  classnoveil_1_1_i_n_info__inherit__graph.map  classnoveil_1_1_i_n_info__inherit__graph.md5  classnoveil_1_1_n_asset_base-members.html  classnoveil_1_1_n_asset_base.html  classnoveil_1_1_n_asset_converter-members.html  classnoveil_1_1_n_asset_converter.html  classnoveil_1_1_n_asset_image-members.html  classnoveil_1_1_n_asset_image.html  classnoveil_1_1_n_asset_manager_tmpl-members.html  classnoveil_1_1_n_asset_manager_tmpl.html  classnoveil_1_1_n_asset_manager_tmpl__inherit__graph.map  classnoveil_1_1_n_asset_manager_tmpl_base.html  classnoveil_1_1_n_asset_manager_tmpl_base__inherit__graph.map  classnoveil_1_1_n_engine-members.html  classnoveil_1_1_n_engine.html  classnoveil_1_1_n_event_base-members.html  classnoveil_1_1_n_event_base.html  classnoveil_1_1_n_event_base__inherit__graph.map  classnoveil_1_1_n_event_base__inherit__graph.md5  (+74 more)
doxygen/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_1.js
doxygen/latex/: _a_character_8h_source.tex  _anim_unit_8h_source.tex  _n_agent_8h_source.tex  _n_anim_curve_8h_source.tex  _n_animation_8h_source.tex  _n_asset_8h_source.tex  _n_asset_manager_8h_source.tex  _n_engine_8h_source.tex  _n_graph_8h.tex  _n_graph_8h__incl.md5  _n_graph_8h_source.tex  _n_memory_8h_source.tex  _n_renderer_8h_source.tex  _n_sequencer_8h_source.tex  _n_texture_8h_source.tex  _n_utils_8h_source.tex  _n_variant_8h_source.tex  annotated.tex  classnoveil_1_1_i_n_info.tex  classnoveil_1_1_n_asset_base.tex  classnoveil_1_1_n_asset_converter.tex  classnoveil_1_1_n_asset_image.tex  classnoveil_1_1_n_asset_manager_tmpl.tex  classnoveil_1_1_n_asset_manager_tmpl__coll__graph.md5  classnoveil_1_1_n_asset_manager_tmpl_base.tex  classnoveil_1_1_n_asset_manager_tmpl_base__inherit__graph.md5  classnoveil_1_1_n_engine.tex  classnoveil_1_1_n_event_base.tex  classnoveil_1_1_n_event_impl.tex  classnoveil_1_1_n_graph_base.tex  classnoveil_1_1_n_graph_base__inherit__graph.md5  classnoveil_1_1_n_graph_template.tex  classnoveil_1_1_n_node_base.tex  classnoveil_1_1_n_node_base__coll__graph.md5  classnoveil_1_1_n_node_base__inherit__graph.md5  classnoveil_1_1_n_node_execution_test1.tex  classnoveil_1_1_n_node_pin_base.tex  classnoveil_1_1_n_node_pin_base__coll__graph.md5  classnoveil_1_1_n_node_pin_execution.tex  classnoveil_1_1_n_node_pin_input.tex  (+10 more)
include/: NAsset.h  NAssetManager.cpp  NAssetManager.h  NEngine.h  NFileIO.h  NGraph.h  NGraphParser.h  NMemory.h  NNodeGenerator.h  NRenderer.h  NTexture.h  NUtils.h  NVariant.h
src/Logic/NAsset/: NAsset.cpp
src/Logic/NAsset/NAssetTexture/: NTexture.cpp
src/Logic/NGraph/: NGraph.cpp  NGraphParser.cpp
src/NEngine/: CMakeLists.txt  NEngine.cpp
src/NVideo/: NRenderer.cpp
